--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,6 @@ html,
 body {
   height: 100vh;
   width: 100%;
-  overflow-x: hidden;
 }
 
 *{
